--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@ h1, h2, h3, h4, h5, h6 {
     color: #53636a;
 }
 
+.row-bottom-margin-80 {
+    margin-bottom: 80px;
+}
 
 
 .jumbotron h1 {
@@ -33,6 +36,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .my-container {
     width: 90%;
+    margin: 0 auto;
 }
 
 .sidebar {
@@ -51,12 +55,18 @@ h1, h2, h3, h4, h5, h6 {
     cursor: pointer;
 }
 
-.territory-maps img {
-
-    max-height: 500px;
-    margin-bottom: 50px;
+.overall-map-col {
+    margin-top: 100px;
 }
 
-.map {
-    cursor: zoom-in;
+.img-thumbnail {
+    width: 100%;
+
+
+}
+
+.quad-maps {
+    width: 60%;
+
+
 }
